--- a/pom.xml
+++ b/pom.xml
@@ -167,14 +167,14 @@
                         </goals>
                         <configuration>
                             <backend>pdf</backend>
-                            <!--<sourceHighlighter>coderay</sourceHighlighter>-->
+                            <sourceHighlighter>coderay</sourceHighlighter>
                             <!--<doctype>book</doctype>-->
                             <outputDirectory>${asciidoctor.pdf.output.directory}</outputDirectory>
-                            <!--<attributes>-->
-                                <!--<pdf-fontsdir>${project.basedir}/src/docs/data/fonts</pdf-fontsdir>-->
-                                <!--<pdf-stylesdir>${project.basedir}/src/docs/data/themes</pdf-stylesdir>-->
-                                <!--<pdf-style>cn</pdf-style>-->
-                            <!--</attributes>-->
+                            <attributes>
+                                <pdf-fontsdir>fonts</pdf-fontsdir>
+                                <pdf-stylesdir>themes</pdf-stylesdir>
+                                <pdf-style>cn</pdf-style>
+                            </attributes>
                         </configuration>
                     </execution>
 
